--- a/src/html/partials/about-us.html
+++ b/src/html/partials/about-us.html
@@ -1,13 +1,11 @@
-<!-- <section class="about-us"> -->
-  <!-- <h2 class="about-us__title">QUIÉNES SOMOS</h2>-->
   <article class="about-us__article @@className"> 
     <img src="@@image" alt="@@alt" />
-    <div class="about-us__info">
-      <p class="about-us__name">@@name</p>
-      <p class="about-us__description">
+    <div class="about-us__info @@className">
+      <p class="about-us__name @@className">@@name</p>
+      <p class="about-us__description @@className">
         @@description
       </p>
-      <div class="about-us__rrss">
+      <div class="about-us__rrss @@className">
         <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
         <span>·</span>
         <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
@@ -18,88 +16,4 @@
       </div>
     </div>
   </article>
-  <!-- <article class="about-us__article right">
-    <img src="./assets/images/titanic.png" alt="profile-Irene Talavera" />
-    <div class="about-us__info right">
-      <p class="about-us__name right">Irene Talavera</p>
-      <p class="about-us__description right">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
-        exercitationem commodi earum veniam veritatis repellendus ad vitae,
-        cupiditate velit inventore voluptates expedita quibusdam vitae,
-        cupiditate velit inventore voluptates expedita quibusdam iure.
-      </p>
-      <div class="about-us__rrss right">
-        <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-brands fa-github-alt" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-solid fa-envelope" style="color: #099d8d"></i>
-      </div>
-    </div>
-  </article>
-  <article class="about-us__article">
-    <img src="./assets/images/titanic.png" alt="profile-Maria Sánchez" />
-    <div class="about-us__info">
-      <p class="about-us__name">Maria Sánchez</p>
-      <p class="about-us__description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
-        exercitationem commodi earum veniam veritatis repellendus ad vitae,
-        cupiditate velit inventore voluptates expedita quibusdam vitae,
-        cupiditate velit inventore voluptates expedita quibusdam iure.
-      </p>
-      <div class="about-us__rrss">
-        <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-brands fa-github-alt" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-solid fa-envelope" style="color: #099d8d"></i>
-      </div>
-    </div>
-  </article>
-  <article class="about-us__article about-us__right">
-    <img src="./assets/images/titanic.png" alt="profile-Sara Osácar" />
-    <div class="about-us__info right">
-      <p class="about-us__name right">Sara Osácar</p>
-      <p class="about-us__description right">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
-        exercitationem commodi earum veniam veritatis repellendus ad vitae,
-        cupiditate velit inventore voluptates expedita quibusdam vitae,
-        cupiditate velit inventore voluptates expedita quibusdam iure.
-      </p>
-      <div class="about-us__rrss">
-        <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-brands fa-github-alt" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-solid fa-envelope" style="color: #099d8d"></i>
-      </div>
-    </div>
-  </article>
-  <article class="about-us__article">
-    <img src="./assets/images/titanic.png" alt="profile-Lourdes Juárez" />
-    <div class="about-us__info">
-      <p class="about-us__name">Lourdes Juárez</p>
-      <p class="about-us__description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
-        exercitationem commodi earum veniam veritatis repellendus ad vitae,
-        cupiditate velit inventore voluptates expedita quibusdam vitae,
-        cupiditate velit inventore voluptates expedita quibusdam iure.
-      </p>
-      <div class="about-us__rrss">
-        <i class="fa-brands fa-twitter" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-brands fa-linkedin-in" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-brands fa-github-alt" style="color: #099d8d"></i>
-        <span>·</span>
-        <i class="fa-solid fa-envelope" style="color: #099d8d"></i>
-      </div>
-    </div>
-  </article> -->
-<!-- </section> -->
+ 
